[package]
name        = "cntr-nix"
description = "Rust friendly bindings to *nix APIs (fork with features used in cntr)"
version     = "0.10.0-pre1"
authors     = ["Mic92"]
repository  = "https://github.com/Mic92/cntr-nix"
license     = "MIT"
categories  = ["os::unix-apis"]
exclude     = [
  ".gitignore",
  ".travis.yml",
  "test/**/*"
]

[dependencies]
libc = "0.2"
bitflags = "1.0"
cfg-if = "0.1.0"
void = "1.0.2"

[dev-dependencies]
lazy_static = "1"
rand = "0.3.8"
tempdir = "0.3"
tempfile = "2"

[[test]]
name = "test"
path = "test/test.rs"

[[test]]
name = "test-aio-drop"
path = "test/sys/test_aio_drop.rs"

[[test]]
name = "test-mount"
path = "test/test_mount.rs"
harness = false

[[test]]
name = "test-ptymaster-drop"
path = "test/test_ptymaster_drop.rs"

[lib]
name = "nix"
path = "src/lib.rs"
